[package]
name = "mini-hmr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = "0.4.1"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
